# local-crewai-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
.cursor/skills/feishu-contract-loop/: SKILL.md
docs/: COMPETITION_GUIDE.md  CREWAI_RULE_EVIDENCE_FLOW.md  DEMO_VIDEO_SCRIPT.md  DEPLOY.md  DEPLOY_NO_CARD.md  FEISHU_CLOSED_LOOP.md  OPC_SUBMISSION.md  SCREENSHOT_CHECKLIST.md  TECH_SKILL_ARCHITECTURE.md  WEEKLY_BRIEFING_PPT.md  XIAOHUANXIONG_MCP_SETUP.md  复赛提交表单.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArchivePanel.tsx  Atmosphere.tsx  AuditAnalytics.tsx  CapabilityBadges.tsx  FileDropzone.tsx  ReportMarkdown.tsx  WorkflowStrip.tsx
frontend/src/lib/: api.ts
knowledge/: contract_audit_kb.md  real_based_hospital_contract.txt  realistic_software_service_contract.txt  sample_contract.txt
outputs/: token-ab-result.json
outputs/opc-demo/: CUA_RACCOON_RUN_REPORT.md  README.md  agent-prompt-ready.txt  review-response.json
outputs/opc-demo/ppt/: assemble-deck.mjs  create-opc-demo-deck.mjs  create-xiaohuanxiong-workflow-deck.mjs  deck-extensions.css  html-to-pptx.mjs  (+12 more)
outputs/xiaohuanxiong-screenshot-pack/: MANIFEST.md  README.md
prompts/: xiaohuanxiong_core_prompts.md
scripts/: feishu_contract_loop.py  feishu_loop_mcp_server.py  push-hf-space.sh  share-public.sh  token_ab_test.py
skills/contract-review-loop/: SKILL.md
src/local_crewai_demo/: contract_review.py  crew.py  gui.py  main.py  pdf_markdown.py
(+110 files in other folders)
