[project]
name = "local_crewai_demo"
version = "0.1.0"
description = "local_crewai_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
local_crewai_demo = "local_crewai_demo.main:run"
crew_gui = "local_crewai_demo.gui:main"
run_crew = "local_crewai_demo.main:run"
train = "local_crewai_demo.main:train"
replay = "local_crewai_demo.main:replay"
test = "local_crewai_demo.main:test"
run_with_trigger = "local_crewai_demo.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
